Bug 359747 - Clipboard sharing not working under Wayland
Summary: Clipboard sharing not working under Wayland
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords:
: 390933 410063 410162 438598 441046 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-02-24 12:02 UTC by Daniel
Modified: 2021-11-09 21:50 UTC (History)
17 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel 2016-02-24 12:02:40 UTC
Steps to reproduce.
1. Start a GNOME on Wayland session
2. Pair an Android device with KDE Connect
3. Select some text on your PC and copy it
4. Try pasting it on Android
5. Select some other text on Android
6. Try pasting it on your PC

Expected:
Clipboard sharing between KDE Connect clients.

Actual:
No clipboard sharing under Wayland.

Work-around:
Run in X instead of Wayland.

Notes:
I’m aware that the clipboard is better protected in Wayland than it was in X by design, but this feature must either be disabled in the plugin list when running under Wayland or preferably fixed properly.

kde-connect version 0.9 (this version wasn’t an available option in the bug reporting wizard).
Comment 1 Alexander Mentyu 2018-08-07 10:54:30 UTC
*** Bug 390933 has been marked as a duplicate of this bug. ***
Comment 2 Munzir Taha 2019-03-16 10:01:22 UTC
Not only GNOME, it doesn't work even in KDE
Comment 3 Nicolas Fella 2019-07-22 17:28:40 UTC
*** Bug 410063 has been marked as a duplicate of this bug. ***
Comment 4 Nicolas Fella 2019-07-25 12:19:30 UTC
*** Bug 410162 has been marked as a duplicate of this bug. ***
Comment 5 Andrey 2020-03-21 21:42:49 UTC
Any thoughts we can do with it on Wayland?
Comment 6 David Edmundson 2020-04-20 16:46:16 UTC
There is a branch started davidedmundson/data_control

I need to finish it. The big blocker here is whilst the protocol itself is super easy, handling the case of copying data_control clipboards and regular clipboards into each other in Seat, without introducing an abstract superclass is really difficult, at least not without writing unique code for all possible combos of data control -> clipboard data_control _> data_control and so on.

And we can't introduce an abstract superclass because of stupid ABI.
(meeting about that soon...)
Comment 7 David Edmundson 2021-01-28 22:17:26 UTC
We now support data control.

Please copy+paste plasma-workspace/klipper/systemclipboard for an implementation.

or we can see about moving that to frameworks if we find there are many more users.
Comment 8 Jerry 2021-02-28 03:19:52 UTC
hi guys , any track on final implementation ?
Comment 10 Aleix Pol 2021-04-07 01:12:38 UTC
Git commit 389a47b0880d2c320ecae8adaab4fd0d361b7e6a by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 07/04/2021 at 00:43.
Pushed by apol into branch 'master'.

Add support for clipboard integration

Copies over David's implementation in Klipper and integrates it in the
plugin. To do so it splits the ClipboardListener class into 2
subclasses: one that uses QClipboard and the other that uses the
DataControl classes.

M  +15   -2    plugins/clipboard/CMakeLists.txt
M  +71   -15   plugins/clipboard/clipboardlistener.cpp
M  +37   -17   plugins/clipboard/clipboardlistener.h
A  +351  -0    plugins/clipboard/datacontrol.cpp     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +35   -0    plugins/clipboard/datacontrol.h     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +278  -0    plugins/clipboard/wlr-data-control-unstable-v1.xml

https://invent.kde.org/network/kdeconnect-kde/commit/389a47b0880d2c320ecae8adaab4fd0d361b7e6a
Comment 11 Rob Sanders 2021-04-12 19:56:49 UTC
Is there a chance this feature will make it into 21.04?
Comment 12 Nicolas Fella 2021-04-12 20:07:51 UTC
(In reply to Rob Sanders from comment #11)
> Is there a chance this feature will make it into 21.04?

No, it's too late for that
Comment 13 Nicolas Fella 2021-06-20 11:08:21 UTC
*** Bug 438598 has been marked as a duplicate of this bug. ***
Comment 14 Nicolas Fella 2021-11-09 21:50:23 UTC
*** Bug 441046 has been marked as a duplicate of this bug. ***
Comment 15 Nicolas Fella 2021-11-09 21:50:45 UTC
*** Bug 429173 has been marked as a duplicate of this bug. ***